# bluetooth-smart-light-switch

./: .gitignore  README.md
board/: case-board-outline.dxf  fp-lib-table  nordic-switch-cache.lib  nordic-switch.kicad_pcb  nordic-switch.kicad_prl  nordic-switch.kicad_pro  nordic-switch.kicad_sch  nordic-switch.pro  nordic-switch.sch
board/gerber/: nordic-switch-B_Cu.gbr  nordic-switch-B_Mask.gbr  nordic-switch-B_Paste.gbr  nordic-switch-B_SilkS.gbr  nordic-switch-B_Silkscreen.gbr  nordic-switch-Edge_Cuts.gbr  nordic-switch-F_Cu.gbr  nordic-switch-F_Mask.gbr  nordic-switch-F_Paste.gbr  nordic-switch-F_SilkS.gbr  nordic-switch-F_Silkscreen.gbr  nordic-switch-NPTH.drl  nordic-switch-PTH.drl  nordic-switch.drl
board/nordic-switch.pretty/: CP_CBB_684J_400V_Flat.kicad_mod  Pepe-Logo.kicad_mod
firmware/: .gitignore  Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: main.rs
